# api/routes/asset.router.js
@@ -7,6 +7,9 @@ assetRouter.post("/", assets.create);
 // Retrieve all assets
 assetRouter.get("/", assets.findAll);
 
+// Retrieve all assets
+assetRouter.get("/search", assets.search);
+
 // Retrieve a single asset with id
 assetRouter.get("/:id", assets.findOne);
 
@@ -18,5 +21,6 @@ assetRouter.delete("/:id", assets.delete);
 
 // Delete all assets
 assetRouter.delete("/", assets.deleteAll);
+
 
 module.exports = assetRouter;
